Banner section finished without responsive

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -85,3 +85,6 @@ $font-work-sans: 'Work Sans', sans-serif;
 $white-color: #ffffff;
 $dark-1-color: #131313;
 $dark-2-color: #424242;
+$dark-3-color: #727272;
+$orange-color: #ff900e;
+$bg-color: rgba(255, 144, 14, 0.1);
