--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -88,3 +88,60 @@ $dark-2-color: #424242;
 $dark-3-color: #727272;
 $orange-color: #ff900e;
 $bg-color: rgba(255, 144, 14, 0.1);
+
+// Button
+@mixin button-style {
+  padding: 21px 25px;
+  background-color: $orange-color;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  font-size: 1.25rem;
+  font-family: $font-work-sans;
+  font-weight: 600;
+  color: $white-color;
+}
+@mixin paragraph-style {
+  color: $dark-3-color;
+  font-family: $font-work-sans;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+
+@mixin title-style($font-size) {
+  color: $dark-1-color;
+  font-family: $font-work-sans;
+  font-size: $font-size;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+/// BreakPoint
+@mixin respond($breakpoint) {
+  @if $breakpoint == sm {
+    @media (max-width: 576px) {
+      @content;
+    }
+  } @else if $breakpoint == md {
+    @media (max-width: 768px) {
+      @content;
+    }
+  } @else if $breakpoint == lg {
+    @media (max-width: 992px) {
+      @content;
+    }
+  } @else if $breakpoint == xl {
+    @media (max-width: 1200px) {
+      @content;
+    }
+  } @else if $breakpoint == xxl {
+    @media (max-width: 1440px) {
+      @content;
+    }
+  }
+}
